<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/medicina_esp"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="1dp"/>

                <TextView
                    android:layout_width="210dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="38dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/desc_oncologia"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/oncologia"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="3dp"
                    android:background="@color/teal_700"
                    android:text="@string/expand_all"
                    android:textColor="@color/black"
                    android:textSize="9sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


</LinearLayout>