<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="#fff"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <ImageView
                android:id="@+id/posterImge"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ic_persona" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleTextView"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/card_view"
            android:layout_toRightOf="@+id/card_view"
            android:padding="4dp"
            android:text="@string/nombre_medico"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoTextView"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/card_view"
            android:layout_toRightOf="@+id/card_view"
            android:padding="4dp"
            android:text="@string/especialidad_medico"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ratingTextView"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoTextView"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/card_view"
            android:layout_toRightOf="@+id/card_view"
            android:padding="4dp"
            android:text="Horario: "
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>